Fix grid tiles not taking full width on small devices

--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -6,7 +6,9 @@
   }
 }
 .single-offer {
-  flex: 1 1 50%;
+  flex: 1 1 49%;
+  padding-bottom: 30px;
+  margin: 0 5px;
   .desc {
     margin-left: 12px;
   }
